--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://f4483f30-71b9-48f7-9ec3-1c31f3a30eca.preview.emergentagent.com
 WDS_SOCKET_PORT=443
